project/caddo-tours
refined the css

--- a/app/about.html
+++ b/app/about.html
@@ -59,9 +59,10 @@
           </div>
         </nav>
       </header>
-      <section>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
+      <section class="hero">
+        <div class="container">
+          <div class="row">
+          <div class="col-xs-12 col-md-6">
             <h1>About Caddo Lake</h1>
             <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
         trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
@@ -71,15 +72,21 @@
               <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
             </p>
           </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="images/sunset/lake-sunset-3-md.jpg" class="img-responsive" alt="Sunset Caddo Lake" />
+          <div class="col-xs-12 col-md-6">
+            <div class="img-container">
+              <img src="images/sunset/lake-sunset-3-md.jpg" class="img-responsive" alt="Sunset Caddo Lake" />
+            </div>
           </div>
+        </div>
         </div>
       </section>
       <section>
-        <div class="row">
+        <div class="container">
+          <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Caddo State Park bridge" />
+            <div class="img-container">
+              <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Caddo State Park bridge" />
+            </div>
           </div>
           <div class="col-xs-12 col-sm-6">
             <h3>Wildlife in the area</h3>
@@ -101,10 +108,12 @@
               </li>
             </ul>
           </div>
+      </div>
         </div>
       </section>
       <section>
-        <div class="row">
+        <div class="container">
+          <div class="row">
           <div class="col-xs-12 col-sm-6">
             <h3>Things to do</h3>
             <p>There are plenty of things to do while in the area. Here are a few:</p>
@@ -126,8 +135,11 @@
             </ul>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/state-park/caddo-lake-state-park-2-md.jpg" alt="Caddo State Park" />
+            <div class="img-container">
+              <img class="img-responsive" src="images/state-park/caddo-lake-state-park-2-md.jpg" alt="Caddo State Park" />
+            </div>
           </div>
+        </div>
         </div>
       </section>
       <footer>
@@ -144,6 +156,15 @@
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
+              <div class="map-container">
+                <iframe width="100%"
+                        height="450"
+                        frameborder="0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                        allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
               <h4>Quick Links</h4>
               <ul class="list-unstyled">
                 <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
@@ -151,9 +172,6 @@
                 <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
                 <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
               </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <h4>Social Media</h4>
             </div>
           </div>
           <p class="copy-right">Copyright 2018 &copy;</p>
