--- a/app/directions.html
+++ b/app/directions.html
@@ -62,37 +62,43 @@
           </div>
         </nav>
       </header>
-       <section>
-        <h1>Directions</h1>
-         <p>Knowing how to get some where is half the battle. Let me help you out because Caddo Lake is a gem that can be hard to find.</p>
-         <p>Rest assured, once you make it to Caddo Lake you will find that it was well worth it.</p>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <h2>Specific Directions</h2>
-            <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas.</p>
-            <p>Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State Park. <strong>Tours are available daily</strong>.</p>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="map-container">
-              <iframe width="100%"
-                    height="450"
-                    frameborder="0"
-                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
-                    allowfullscreen></iframe>
+       <section class="hero">
+         <div class="container">
+           <h1>Directions</h1>
+           <p>Knowing how to get some where is half the battle. Let me help you out because Caddo Lake is a gem that can be hard to find.</p>
+           <p>Rest assured, once you make it to Caddo Lake you will find that it was well worth it.</p>
+           <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <h2>Specific Directions</h2>
+              <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas.</p>
+              <p>Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State Park. <strong>Tours are available daily</strong>.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <div class="map-container">
+                <iframe width="100%"
+                        height="450"
+                        frameborder="0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                        allowfullscreen></iframe>
+              </div>
             </div>
           </div>
-        </div>
+         </div>
        </section>
        <section>
-         <div class="row">
+         <div class="container">
+          <div class="row">
            <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/sunset/lake-sunset-xl.jpg" alt="Sunset" />
+             <div class="img-container">
+               <img class="img-responsive" src="images/sunset/lake-sunset-xl.jpg" alt="Sunset" />
+             </div>
            </div>
            <div class="col-xs-12 col-sm-6">
              <h3>Take in the beauty</h3>
              <p>Still not convinced that Caddo Lake is worth the visit? Check out our photo gallery to get a glimpse of what awaits you.</p>
              <p><a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a></p>
            </div>
+         </div>
          </div>
        </section>
        <footer>
@@ -109,6 +115,15 @@
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
+              <div class="map-container">
+                <iframe width="100%"
+                        height="450"
+                        frameborder="0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                        allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
               <h4>Quick Links</h4>
               <ul class="list-unstyled">
                 <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
@@ -116,9 +131,6 @@
                 <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
                 <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
               </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <h4>Social Media</h4>
             </div>
           </div>
           <p class="copy-right">Copyright 2018 &copy;</p>
