--- a/app/index.html
+++ b/app/index.html
@@ -68,39 +68,45 @@
         </div>
       </section>
       <section>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <h1>Tour Caddo Lake!</h1>
-            <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acers of bald Cypress trees, spanish moss, abundant wildlife and
-              scenery that you will never forget. The lake has everything from
-          swamps, bayous and river ways that create a one of a kind experience.</p>
-            <p>Check out our photo gallery to see some of the beauty that awats you.</p>
-            <a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/sunset/lake-sunset-3-md.jpg" alt="Sunset Caddo Lake" />
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-6">
+              <h1>Tour Caddo Lake!</h1>
+              <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acers of bald Cypress trees, spanish moss, abundant wildlife and
+                scenery that you will never forget. The lake has everything from
+            swamps, bayous and river ways that create a one of a kind experience.</p>
+              <p>Check out our photo gallery to see some of the beauty that awats you.</p>
+              <p><a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a></p>
+            </div>
+            <div class="col-xs-12 col-md-6">
+              <div class="img-container">
+                <img class="img-responsive" src="images/sunset/lake-sunset-3-md.jpg" alt="Sunset Caddo Lake" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
       <section>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <h2>A lake rich with history</h2>
-            <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <h2>A lake rich with history</h2>
+              <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
         trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
-            <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
+              <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
           lake a certain mystic created by the characters from it's past.</p>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-           <h3 class="h2">Areas of Caddo Lake</h3>
-            <ul class="list-unstyled">
-              <li>Alligator Bayou</li>
-              <li>Starr Ditch</li>
-              <li>Ames Spring Basin</li>
-              <li>Potter's Point</li>
-              <li>Britt's Gap</li>
-              <li>Government Ditch</li>
-            </ul>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h3 class="h2">Areas of Caddo Lake</h3>
+              <ul class="list-unstyled">
+                <li>Alligator Bayou</li>
+                <li>Starr Ditch</li>
+                <li>Ames Spring Basin</li>
+                <li>Potter's Point</li>
+                <li>Britt's Gap</li>
+                <li>Government Ditch</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -118,6 +124,15 @@
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
+              <div class="map-container">
+                <iframe width="100%"
+                      height="450"
+                      frameborder="0"
+                      src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                      allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
               <h4>Quick Links</h4>
               <ul class="list-unstyled">
                 <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
@@ -125,9 +140,6 @@
                 <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
                 <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
               </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <h4>Social Media</h4>
             </div>
           </div>
           <p class="copy-right">Copyright 2018 &copy;</p>
