--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -62,23 +62,25 @@
           </div>
         </nav>
   </header>
-    <section>
-      <h1>Photo Gallery</h1>
-      <p>Here are some photos of Caddo Lake and the surrounding area so you can get an idea of what it's going to be like.</p>
-      <p>Of course like most things, it's even more beautiful in person. You don't have to take our word for it though, you can come and see for yourself. Call us today!</p>
-      <div class="image-gallery-container">
-        <div class="image-gallery">
-          <div class="slide">
-            <img src="images/state-park/caddo-lake-state-park-2-xl.jpg" alt="Caddo State Park" />
-          </div>
-          <div class="slide">
-            <img src="images/state-park/caddo-lake-state-park-xl.jpg" alt="More of Cado State Park" />
-          </div>
-          <div class="slide">
-            <img src="images/sunset/lake-sunset-xl.jpg" alt="Sunset on the lake" />
-          </div>
-          <div class="slide">
-            <img src="images/sunset/lake-sunset-3-xl.jpg" alt="Another sunset on the lake" />
+    <section class="hero">
+      <div class="container">
+        <h1>Photo Gallery</h1>
+        <p>Here are some photos of Caddo Lake and the surrounding area so you can get an idea of what it's going to be like.</p>
+        <p>Of course like most things, it's even more beautiful in person. You don't have to take our word for it though, you can come and see for yourself. Call us today!</p>
+        <div class="image-gallery-container">
+          <div class="image-gallery">
+            <div class="slide">
+              <img src="images/state-park/caddo-lake-state-park-2-xl.jpg" alt="Caddo State Park" />
+            </div>
+            <div class="slide">
+              <img src="images/state-park/caddo-lake-state-park-xl.jpg" alt="More of Cado State Park" />
+            </div>
+            <div class="slide">
+              <img src="images/sunset/lake-sunset-xl.jpg" alt="Sunset on the lake" />
+            </div>
+            <div class="slide">
+              <img src="images/sunset/lake-sunset-3-xl.jpg" alt="Another sunset on the lake" />
+            </div>
           </div>
         </div>
       </div>
@@ -97,6 +99,15 @@
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
+              <div class="map-container">
+                <iframe width="100%"
+                        height="450"
+                        frameborder="0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                        allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
               <h4>Quick Links</h4>
               <ul class="list-unstyled">
                 <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
@@ -104,9 +115,6 @@
                 <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
                 <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
               </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <h4>Social Media</h4>
             </div>
           </div>
           <p class="copy-right">Copyright 2018 &copy;</p>
