project/caddo-tours
Added real images

--- a/app/about.html
+++ b/app/about.html
@@ -19,6 +19,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N9HT2T6');</script>
+    <!-- End Google Tag Manager -->
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
@@ -26,6 +33,10 @@
     <![endif]-->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9HT2T6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container body-content">
       <header>
         <div class="logo-container">
@@ -60,86 +71,74 @@
         </nav>
       </header>
       <section class="hero">
+        <img class="img-responsive" src="images/lake-mirror-1-banner.jpg" alt="Cypress trees" />
+      </section>
+      <section>
         <div class="container">
           <div class="row">
           <div class="col-xs-12 col-md-6">
             <h1>About Caddo Lake</h1>
             <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
         trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
-            <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas. Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State
-          Park. Tours are available daily.</p>
             <p>
               <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
             </p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <div class="img-container">
-              <img src="images/sunset/lake-sunset-3-md.jpg" class="img-responsive" alt="Sunset Caddo Lake" />
-            </div>
-          </div>
-        </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <div class="img-container">
-              <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Caddo State Park bridge" />
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6">
             <h3>Wildlife in the area</h3>
             <p>Here are just a few examples of the wildlife you can expect to see:</p>
             <ul class="list-unstyled">
               <li>
-                <h4><strong>Alligators</strong></h4>
+                <h5><strong>Alligators</strong></h5>
                 <p>A member of the crocodile family, the American alligator is a living fossil from the Age of Reptiles, having survived on earth for 200 million years.</p>
                 <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
               </li>
               <li>
-                <h4><strong>Paddlefish</strong></h4>
+                <h5><strong>Paddlefish</strong></h5>
                 <p>The American paddlefish is a species of basal ray-finned fish closely related to sturgeons in the order Acipenseriformes.</p>
                 <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
               </li>
               <li>
-                <h4><strong>And many more..</strong></h4>
+                <h5><strong>And many more..</strong></h5>
                 <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife_and_habitat/index.html" target="_blank" rel="noopener">More info here.</a></p>
               </li>
             </ul>
           </div>
-      </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="img-container">
+              <img src="images/sunset-10-md.jpg" class="img-responsive" alt="Sunset Caddo Lake" />
+            </div>
+          </div>
+        </div>
         </div>
       </section>
       <section>
         <div class="container">
           <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <h3>Things to do</h3>
-            <p>There are plenty of things to do while in the area. Here are a few:</p>
-            <ul class="list-unstyled">
-              <li>
-                <h4><strong>Fishing</strong></h4>
-                <p>Tons of fishing in the area</p>
-                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
-              </li>
-              <li>
-                <h4><strong>Sight seeing</strong></h4>
-                <p>Enjoy the beautiful lake, lot's of wildlife and the over all mystique of Caddo Lake.</p>
-                <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
-              </li>
-              <li>
-                <h4><strong>Did I mention fishing?</strong></h4>
-                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife_and_habitat/index.html" target="_blank" rel="noopener">More info here.</a></p>
-              </li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="img-container">
-              <img class="img-responsive" src="images/state-park/caddo-lake-state-park-2-md.jpg" alt="Caddo State Park" />
+            <div class="col-xs-12 col-sm-6">
+              <div class="img-container">
+                <img class="img-responsive" src="images/lake-30-md.jpg" alt="Caddo Lake" />
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h3>Things to do</h3>
+              <p>There are plenty of things to do while in the area. Here are a few:</p>
+              <ul class="list-unstyled">
+                <li>
+                  <h4><strong>Fishing</strong></h4>
+                  <p>Tons of fishing in the area</p>
+                  <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
+                </li>
+                <li>
+                  <h4><strong>Sight seeing</strong></h4>
+                  <p>Enjoy the beautiful lake, lot's of wildlife and the over all mystique of Caddo Lake.</p>
+                  <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
+                </li>
+                <li>
+                  <h4><strong>Did I mention fishing?</strong></h4>
+                  <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife_and_habitat/index.html" target="_blank" rel="noopener">More info here.</a></p>
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
         </div>
       </section>
       <footer>
@@ -149,6 +148,7 @@
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Book a Tour</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="photo-gallery.html">Photo Gallery</a></li>
