--- a/app/contact.html
+++ b/app/contact.html
@@ -63,7 +63,7 @@
         </nav>
       </header>
       <section class="hero">
-        <img class="img-responsive" src="images/sunset/lake-sunset-3-xl.jpg" alt="sun set" />
+        <img class="img-responsive" src="images/sunset-20-banner.jpg" alt="sun set" />
       </section>
       <section>
         <div class="container">
@@ -101,7 +101,7 @@
               </form>
             </div>
             <div class="col-xs-12 col-sm-6">
-              <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Another park" />
+              <img class="img-responsive" src="images/aerial-1.jpg" alt="Another park" />
               <h3>Address</h3>
               <ul class="list-unstyled">
                 <li><strong>449 Cypress Drive</strong></li>
@@ -119,11 +119,21 @@
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Book a Tour</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="photo-gallery.html">Photo Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <div class="map-container">
+                <iframe width="100%"
+                        height="450"
+                        frameborder="0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_873jk-UNoYRe7fYU9z3y3I&key=AIzaSyDOtUaGuS_0BsqEpfUPkNVxYdihgtihOhY"
+                        allowfullscreen></iframe>
+              </div>
             </div>
             <div class="col-xs-12 col-sm-4">
               <h4>Quick Links</h4>
@@ -133,9 +143,6 @@
                 <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
                 <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
               </ul>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-              <h4>Social Media</h4>
             </div>
           </div>
           <p class="copy-right">Copyright 2018 &copy;</p>
