--- a/app/directions.html
+++ b/app/directions.html
@@ -19,6 +19,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N9HT2T6');</script>
+    <!-- End Google Tag Manager -->
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -29,6 +36,10 @@
     <![endif]-->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9HT2T6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
      <div class="container body-content">
        <header>
         <div class="logo-container">
@@ -62,13 +73,16 @@
           </div>
         </nav>
       </header>
-       <section class="hero">
+      <section class="hero">
+        <img class="img-responsive" src="images/aerial-1-banner.jpg" alt="Cypress trees" />
+      </section>
+       <section>
          <div class="container">
-           <h1>Directions</h1>
-           <p>Knowing how to get some where is half the battle. Let me help you out because Caddo Lake is a gem that can be hard to find.</p>
-           <p>Rest assured, once you make it to Caddo Lake you will find that it was well worth it.</p>
            <div class="row">
             <div class="col-xs-12 col-sm-6">
+              <h1>Directions</h1>
+              <p>Knowing how to get some where is half the battle. Let me help you out because Caddo Lake is a gem that can be hard to find.</p>
+              <p>Rest assured, once you make it to Caddo Lake you will find that it was well worth it.</p>
               <h2>Specific Directions</h2>
               <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas.</p>
               <p>Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State Park. <strong>Tours are available daily</strong>.</p>
@@ -96,7 +110,7 @@
            <div class="col-xs-12 col-sm-6">
              <h3>Take in the beauty</h3>
              <p>Still not convinced that Caddo Lake is worth the visit? Check out our photo gallery to get a glimpse of what awaits you.</p>
-             <p><a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a></p>
+             <p><a class="btn btn-info" href="contact.html">Book a Tour</a></p>
            </div>
          </div>
          </div>
@@ -108,6 +122,7 @@
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Book a Tour</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="photo-gallery.html">Photo Gallery</a></li>
