--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N9HT2T6');</script>
+    <!-- End Google Tag Manager -->
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -29,6 +36,10 @@
     <![endif]-->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9HT2T6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="container body-content">
       <header>
         <div class="logo-container">
@@ -63,9 +74,7 @@
         </nav>
       </header>
       <section class="hero">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" width="560" height="315" src="//www.youtube.com/embed/UHW2DYEtvi4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+        <img class="img-responsive" src="images/lake-banner-4.jpg" alt="Cypress trees at Caddo Lake" />
       </section>
       <section>
         <div class="container">
@@ -76,27 +85,15 @@
                 scenery that you will never forget. The lake has everything from
             swamps, bayous and river ways that create a one of a kind experience.</p>
               <p>Check out our photo gallery to see some of the beauty that awats you.</p>
-              <p><a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a></p>
+              <p>
+                <a class="btn btn-info" href="contact.html">Book a Tour</a>
+              </p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <div class="img-container">
-                <img class="img-responsive" src="images/sunset/lake-sunset-3-md.jpg" alt="Sunset Caddo Lake" />
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="//www.youtube.com/embed/UHW2DYEtvi4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6">
-              <h2>A lake rich with history</h2>
-              <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
-        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
-              <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
-          lake a certain mystic created by the characters from it's past.</p>
-            </div>
-            <div class="col-xs-12 col-sm-6">
+              <!--
               <h3 class="h2">Areas of Caddo Lake</h3>
               <ul class="list-unstyled">
                 <li>Alligator Bayou</li>
@@ -106,6 +103,25 @@
                 <li>Britt's Gap</li>
                 <li>Government Ditch</li>
               </ul>
+              -->
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <div class="img-container">
+                <img class="img-responsive" src="images/aerial-2-md.jpg" alt="Aerial view of Caddo Lake" />
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h2>A lake rich with history</h2>
+              <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
+        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
+              <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
+          lake a certain mystic created by the characters from it's past.</p>
             </div>
           </div>
         </div>
@@ -117,6 +133,7 @@
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Book a Tour</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="photo-gallery.html">Photo Gallery</a></li>
