--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -19,6 +19,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N9HT2T6');</script>
+    <!-- End Google Tag Manager -->
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
@@ -29,6 +36,10 @@
     <![endif]-->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9HT2T6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
    <div class="container body-content">
     <header>
         <div class="logo-container">
@@ -92,6 +103,7 @@
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Book a Tour</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="photo-gallery.html">Photo Gallery</a></li>
