project/caddo-tours
finishing up some final touches

--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -77,7 +77,7 @@
       <div class="container">
         <h1>Photo Gallery</h1>
         <p>Here are some photos of Caddo Lake and the surrounding area so you can get an idea of what it's going to be like.</p>
-        <p>Of course like most things, it's even more beautiful in person. You don't have to take our word for it though, you can come and see for yourself. Call us today!</p>
+        <p>Of course, like most things, it's even more beautiful in person. You don't have to take our word for it though, you can come and see for yourself. Call us today!</p>
         <div class="image-gallery-container">
           <div class="image-gallery">
             <div class="slide">
