--- a/app/about.html
+++ b/app/about.html
@@ -78,8 +78,7 @@
           <div class="row">
           <div class="col-xs-12 col-md-6">
             <h1>About Caddo Lake</h1>
-            <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
-        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
+            <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the Caddo Indian tribes that inhabited the area and the steamboat navigational trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
             <p>
               <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
             </p>
@@ -128,8 +127,8 @@
                   <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
                 </li>
                 <li>
-                  <h4><strong>Sight seeing</strong></h4>
-                  <p>Enjoy the beautiful lake, lot's of wildlife and the over all mystique of Caddo Lake.</p>
+                  <h4><strong>Sightseeing</strong></h4>
+                  <p>Enjoy the beautiful lake, lots of wildlife and the overall mystique of Caddo Lake.</p>
                   <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
                 </li>
                 <li>
