--- a/app/index.html
+++ b/app/index.html
@@ -81,10 +81,8 @@
           <div class="row">
             <div class="col-xs-12 col-md-6">
               <h1>Tour Caddo Lake!</h1>
-              <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acers of bald Cypress trees, spanish moss, abundant wildlife and
-                scenery that you will never forget. The lake has everything from
-            swamps, bayous and river ways that create a one of a kind experience.</p>
-              <p>Check out our photo gallery to see some of the beauty that awats you.</p>
+              <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acres of Bald Cypress trees, Spanish moss, abundant wildlife, and scenery that you will never forget. The lake has everything from swamps, bayous and river ways that create a one of a kind experience.</p>
+              <p>Book a tour today to see some of the beauty that awaits you.</p>
               <p>
                 <a class="btn btn-info" href="contact.html">Book a Tour</a>
               </p>
@@ -93,17 +91,6 @@
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315" src="//www.youtube.com/embed/UHW2DYEtvi4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
-              <!--
-              <h3 class="h2">Areas of Caddo Lake</h3>
-              <ul class="list-unstyled">
-                <li>Alligator Bayou</li>
-                <li>Starr Ditch</li>
-                <li>Ames Spring Basin</li>
-                <li>Potter's Point</li>
-                <li>Britt's Gap</li>
-                <li>Government Ditch</li>
-              </ul>
-              -->
             </div>
           </div>
         </div>
@@ -118,10 +105,11 @@
             </div>
             <div class="col-xs-12 col-sm-6">
               <h2>A lake rich with history</h2>
-              <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
-        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
-              <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
-          lake a certain mystic created by the characters from it's past.</p>
+              <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the Caddo Indian tribes that inhabited the area and the steamboat navigational trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
+              <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the lake a certain mystic created by the characters from it's past.</p>
+              <p>
+                <a class="btn btn-info" href="photo-gallery.html">Photo Gallery</a>
+              </p>
             </div>
           </div>
         </div>
