project/caddo-tours
added form.php

--- a/app/directions.html
+++ b/app/directions.html
@@ -43,10 +43,10 @@
      <div class="container body-content">
        <header>
         <div class="logo-container">
-          <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
+          <a class="logo" href="/">Caddo Lake Bayou Tours</a>
         </div>
         <nav class="navbar navbar-default">
-          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
+          <a class="navbar-brand" href="/">Caddo Lake Bayou Tours</a>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -58,16 +58,16 @@
           <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav">
               <li>
-                <a href="about.html">About</a>
+                <a href="about">About</a>
               </li>
               <li class="active">
-                <a href="directions.html">Directions</a>
+                <a href="directions">Directions</a>
               </li>
               <li>
-                <a href="photo-gallery.html">Photo Gallery</a>
+                <a href="photo-gallery">Photo Gallery</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -121,12 +121,12 @@
             <div class="col-xs-12 col-sm-4">
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Book a Tour</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="directions.html">Directions</a></li>
-                <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="contact">Book a Tour</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="directions">Directions</a></li>
+                <li><a href="photo-gallery">Photo Gallery</a></li>
+                <li><a href="contact">Contact</a></li>
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
