--- a/app/index.html
+++ b/app/index.html
@@ -43,10 +43,10 @@
     <div class="container body-content">
       <header>
         <div class="logo-container">
-          <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
+          <a class="logo" href="/">Caddo Lake Bayou Tours</a>
         </div>
         <nav class="navbar navbar-default">
-          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
+          <a class="navbar-brand" href="/">Caddo Lake Bayou Tours</a>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -58,16 +58,16 @@
           <div class="collapse navbar-collapse" id="main-nav">
             <ul class="nav navbar-nav">
               <li>
-                <a href="about.html">About</a>
+                <a href="about">About</a>
               </li>
               <li>
-                <a href="directions.html">Directions</a>
+                <a href="directions">Directions</a>
               </li>
               <li>
-                <a href="photo-gallery.html">Photo Gallery</a>
+                <a href="photo-gallery">Photo Gallery</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -84,7 +84,7 @@
               <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acres of Bald Cypress trees, Spanish moss, abundant wildlife, and scenery that you will never forget. The lake has everything from swamps, bayous and river ways that create a one of a kind experience.</p>
               <p>Book a tour today to see some of the beauty that awaits you.</p>
               <p>
-                <a class="btn btn-info" href="contact.html">Book a Tour</a>
+                <a class="btn btn-info" href="contact">Book a Tour</a>
               </p>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -108,7 +108,7 @@
               <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the Caddo Indian tribes that inhabited the area and the steamboat navigational trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
               <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the lake a certain mystic created by the characters from it's past.</p>
               <p>
-                <a class="btn btn-info" href="photo-gallery.html">Photo Gallery</a>
+                <a class="btn btn-info" href="photo-gallery">Photo Gallery</a>
               </p>
             </div>
           </div>
@@ -120,12 +120,12 @@
             <div class="col-xs-12 col-sm-4">
               <h4>Sitemap</h4>
               <ul class="list-unstyled">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Book a Tour</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="directions.html">Directions</a></li>
-                <li><a href="photo-gallery.html">Photo Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="contact">Book a Tour</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="directions">Directions</a></li>
+                <li><a href="photo-gallery">Photo Gallery</a></li>
+                <li><a href="contact">Contact</a></li>
               </ul>
             </div>
             <div class="col-xs-12 col-sm-4">
